--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint-check": "npx eslint ./src",
+    "lint-check": "npx eslint .",
     "lint-fix": "npx eslint . --fix",
     "prepare": "husky install"
   },
