--- a/app.json
+++ b/app.json
@@ -11,11 +11,10 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.akuchukwu.mysafe"
     },
     "android": {
       "adaptiveIcon": {
@@ -26,8 +25,11 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": [
-      "expo-font"
-    ]
+    "plugins": ["expo-font"],
+    "extra": {
+      "eas": {
+        "projectId": "a7fb63be-d67c-43b7-a83f-15b824ffcf8e"
+      }
+    }
   }
 }
