--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "eslint-config-love": "^48.0.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "expo": "~50.0.7",
+    "expo-asset": "~9.0.2",
+    "expo-constants": "~15.4.6",
     "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
     "expo-splash-screen": "~0.26.4",
@@ -32,6 +34,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
+    "react-native-svg-transformer": "^1.4.0",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
