--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@supabase/supabase-js": "^2.43.4",
+    "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "eslint-config-love": "^48.0.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "expo": "~50.0.7",
